test/test_examples/syntactic_examples/syntax_error/error_statement_98.zig
// Syntax error: missing "while" keyword

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    (y < x)
    {
        processItem(1458242);
    }
}